<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/white3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/verifarea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="24dp"
        app:layout_constraintBottom_toTopOf="@+id/belikode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/kktitel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kk"
            android:fontFamily="@font/nunito_bold"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/black3"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/kksubtitel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ketik_kk"
            android:textSize="16sp"
            android:textColor="@color/black3"
            android:fontFamily="@font/rubik_regular"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kktitel"/>
        <EditText
            android:id="@+id/isikk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_kk"
            android:padding="16dp"
            android:background="@drawable/text"
            android:textColor="@color/black3"
            android:textColorHint="@color/black3"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:maxLength="8"
            android:gravity="center"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/kksubtitel"/>
        <TextView
            android:id="@+id/persetujuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/persetujuan"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="@color/black3"
            android:fontFamily="@font/rubik_regular"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/isikk"/>
        <android.widget.Button
            android:id="@+id/btnMasuk"
            android:onClick="btnmasuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/nunito_bold"
            android:background="@drawable/button_yellow"
            android:text="@string/masuk"
            app:layout_constraintTop_toBottomOf="@id/persetujuan"/>/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/belikode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:elevation="20dp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="24dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_kk"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/gunmetal"
            android:textSize="16sp"
            android:gravity="center"/>
        <android.widget.Button
            android:id="@+id/btnbeli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/button_blue"
            android:fontFamily="@font/nunito_bold"
            android:textStyle="bold"
            android:text="@string/beli_kk"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>