<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white3"
    android:clipToPadding="false"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/imagearea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_get_start_timitory" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true">
            <TextView
                android:id="@+id/txtwelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:textSize="22sp"
                android:text="@string/welcome"
                android:textColor="@color/black3"/>
            <TextView
                android:id="@+id/txtwelcome2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/nunito_bold"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@string/welcome2"
                android:textColor="@color/black3"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="643dp"
        android:background="@color/white"
        android:elevation="20dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.widget.Button
            android:id="@+id/btnStart"
            android:onClick="btnmulai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_yellow"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/mulai"
            android:textStyle="bold" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>